# OS

./: README.md  bochslog.txt  bochsrc.txt  build.sh  link.ld  loader.s  menu.lst  os.iso
.VSCodeCounter/2024-01-26_15-00-55/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-02-01_22-26-01/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
OS/: Cargo.toml
OS/src/: main.rs
blog_os/: Cargo.toml  boot.sh  build_info.txt
blog_os/.cargo/: config.toml
blog_os/src/: allocator.rs  interrupts.rs  lib.rs  main.rs  memory.rs  mod.rs  vga_buffer.rs
blog_os/src/System69/: cmdprmpt.rs  mod.rs
blog_os/src/display/: vga_buffer.rs
blog_os/src/kernel/: delay.rs  display.rs  keyboard.rs  mod.rs  scheduler.rs  tasks.rs  tick.rs
blog_os/src/tests/: mod.rs  test_runner.rs
blog_os/src/utils/: delay.rs
blog_os/tests/: basic_boot.rs
iso/boot/: kernel.elf
