[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"

# [profile.dev]
# panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = { version = "0.9.3", features = ["map_physical_memory"]} # Literally can't be the newest version of bootloader for some reason
volatile = "0.2.6"
spin = "0.5.2"
embedded-graphics = "0.8.1"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
